Crear superusuario, registrar productos y mostrarlos en la pagina

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -122,7 +122,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<li><i class="fa fa-home" aria-hidden="true"></i><a href="{% url 'index' %}">Inicio</a><span>|</span></li>
 				{% if  request.path == '/events'%}
 				<li>Eventos</li>
-				{% elif request.path == '/products' %}
+				{% elif request.path == '/products/'%}
 				<li>Productos</li>
 				{% elif request.path == '/about' %}
 				<li>Acerca de...</li>
