--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -128,7 +128,7 @@
 								<figure>
 									<div class="snipcart-item block">
 										<div class="snipcart-thumb">
-											<a href=""><img src="{{product.image.url}}" alt=" " class="img-responsive" /></a>
+											<a href="{{product.id }}"><img src="{{product.image.url}}" alt=" " class="img-responsive" /></a>
 											<p>{{product.name}}</p>
 											<h4>{{product.price}} <span>$5.00</span></h4>
 										</div>
