--- a/registration/templates/registration/profile_form.html
+++ b/registration/templates/registration/profile_form.html
@@ -1,7 +1,7 @@
 {% extends 'core/base.html' %}
 {% load static %}
 {% block title %}Perfil{% endblock %}
-{% block content %}
+{% block profile %}
 <style>.errorlist{color:red;} label{display:none}</style>
 <main role="main">
   <div class="container">
