--- a/registration/templates/registration/signup.html
+++ b/registration/templates/registration/signup.html
@@ -1,7 +1,7 @@
 {% extends 'core/base.html' %}
 {% load static %}
 {% block title %}Registro{% endblock %}
-{% block content %}
+{% block register %}
   <!--{% if request.user.is_authenticated %}
     <script>window.location.href = '/accounts/profile/'; </script>
   {% endif %}-->
@@ -10,17 +10,17 @@
   <div class="container">
     <div class="row mt-3">
       <div class="col-md-9 mx-auto mb-5">
-        <!--{% if 'register' in request.GET %}
+        {% if 'register' in request.GET %}
           <p style="color:green;">Usuario registrado correctamente, ya puedes identificarte.</p>
-        {% endif %}-->
+        {% endif %}
         <form action="" method="post">{% csrf_token %}
           <h3 class="mb-4">Registro</h3>
           {{form.as_p}}
           <p><input type="submit" class="btn btn-primary btn-block" value="Confirmar"></p>
         </form>
-        <!--<p>
+        <p>
           ¿Ha olvidado su clave? Puede restaurarla <a href="{% url 'password_reset' %}">aquí</a>.
-        </p>-->
+        </p>
       </div>
     </div>
   </div>
