--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -130,11 +130,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="w3ls_logo_products_left1">
 				<ul class="special_items">
-					<li><a href="{% url 'events' %}">Eventos</a><i>/</i></li>
+					<li><a href="{% url 'events' %}">Blog</a><i>/</i></li>
 					<li><a href="{% url 'about' %}">Acerca de</a><i>/</i></li>
 					<li><a href="{% url 'products' %}">Productos</a><i>/</i></li>
 					<li><a href="{% url 'services' %}">Servicios</a><i>/</i></li>
-					<li><a href="{% url 'pages:pages' %}">Noticias</a><i>/</i></li>
+					<!--<li><a href="{% url 'pages:pages' %}">Noticias</a><i>/</i></li>-->
 				</ul>
 				</ul>
 			</div>
@@ -154,15 +154,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="container">
 			<ul>
 				<li><i class="fa fa-home" aria-hidden="true"></i><a href="{% url 'index' %}">Inicio</a><span>|</span></li>
-				{% if  request.path == '/events'%}
-				<li>Eventos</li>
-				{% elif request.path == '/products/' or '<int:pk>/products/'%}
+				{% if  request.path == '/blog/'%}
+				<li>Blog</li>
+				{% elif request.path == '/products/'%}
 				<li>Productos</li>
 				{% elif request.path == '/pages/'%}
 				<li>Noticias</li>
 				{% elif request.path == '/about' %}
 				<li>Acerca de...</li>
-				{% elif request.path == '/services'%}
+				{% elif request.path == '/services/'%}
 				<li>Servicios</li>
 				{% endif %}
 			</ul>
@@ -209,7 +209,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-md-3 w3_footer_grid">
 				<h3>información</h3>
 				<ul class="w3_footer_grid_list">
-					<li><a href="{% url 'events' %}">Eventos</a></li>
+					<li><a href="{% url 'events' %}">Blog</a></li>
 					<li><a href="{% url 'about' %}">Acerca de...</a></li>
 					<li><a href="{% url 'products' %}">Productos</a></li>
 					<li><a href="{% url 'services' %}">Servicios</a></li>
@@ -228,11 +228,21 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="w3_footer_grid_bottom">
 					<h5>conectate con nosotros</h5>
 					<ul class="agileits_social_icons">
-						<li><a href="#" class="facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-						<li><a href="#" class="twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-						<li><a href="#" class="google"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-						<li><a href="#" class="instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-						<li><a href="#" class="dribbble"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
+					{% if LINK_FACEBOOK %}
+						<li><a href="{{LINK_FACEBOOK}}" class="facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+					{% endif %}
+					{% if LINK_TWITTER %}
+						<li><a href="{{LINK_TWITTER}}" class="twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+					{% endif %}
+					{% if LINK_GOOGLE %}	
+						<li><a href="{{LINK_GOOGLE}}" class="google"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+					{% endif %}
+					{% if LINK_INSTAGRAM %}
+						<li><a href="{{LINK_INSTAGRAM}}" class="instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+					{% endif %}
+					{% if LINK_DRIBBBLE %}
+						<li><a href="{{LINK_DRIBBBLE}}" class="dribbble"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
+					{% endif %}
 					</ul>
 				</div>
 			</div>
