--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -29,10 +29,9 @@
 				  <div class="form">
 					<h2>Crear cuenta</h2>
 					<form action="#" method="post">
-					  <input type="text" name="Username" placeholder="Username" required=" ">
+					  {{form.name}}
 					  <input type="password" name="Password" placeholder="Password" required=" ">
 					  <input type="email" name="Email" placeholder="Email Address" required=" ">
-					  <input type="text" name="Phone" placeholder="Phone Number" required=" ">
 					  <input type="submit" value="Register">
 					</form>
 				  </div>
