--- a/core/templates/core/about.html
+++ b/core/templates/core/about.html
@@ -64,12 +64,8 @@
 		<div class="w3l_banner_nav_right">
 <!-- about -->
 		<div class="privacy about">
-			<h3>About Us</h3>
-			<p class="animi">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis 
-				praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias 
-				excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui 
-				officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem 
-				rerum facilis est et expedita distinctio.</p>
+			<h3>Acerca de nosotros</h3>
+			<p class="animi">BÁGAH EXPRESS, es una empresa dedicada a la compra y venta de productos de consumo diario, orientada en el servicio a domicilio, con entregas de muy buenos productos y con la mejor calidad en el menor tiempo posible. Que a través de sus meses de servicio desea convertirse a corto plazo  en un gran servicio innovador  más grandes del estado, para poder seguir distribuyendo, sus productos  con la calidad  de siempre.  </p>
 			<div class="agile_about_grids">
 				<div class="col-md-6 agile_about_grid_right">
 					<img src="{% static 'core/images/31.jpg' %}" alt=" " class="img-responsive" />
