--- a/products/templates/products/single.html
+++ b/products/templates/products/single.html
@@ -9,7 +9,7 @@
 			<div class="agileinfo_single">
 				<h5>>{{product.name}}</h5>
 				<div class="col-md-4 agileinfo_single_left">
-					<img id="example" src="{% url 'productsdetail' %}" alt=" " class="img-responsive" />
+					<img id="example" src="{{product.image.url}}" alt=" " class="img-responsive" />
 				</div>
 				<div class="col-md-8 agileinfo_single_right">
 					<div class="rating1">
