--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -325,8 +325,8 @@ $(document).ready(function(){
 				total += items[i].get('quantity');
 			}
 
-			if (total < 3) {
-				alert('The minimum order quantity is 3. Please add more to your shopping cart before checking out');
+			if (total < 1) {
+				alert('Para continuar añade un producto');
 				evt.preventDefault();
 			}
 		});
