--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -161,18 +161,18 @@
 											<h4>{{product.price}}<span>$10.00</span></h4>
 										</div>
 										<div class="snipcart-details top_brand_home_details">
-											<form action="checkout.html" method="post">
+											<form action="{% url 'checkout' %}" method="post">
 												<fieldset>
 													<input type="hidden" name="cmd" value="_cart" />
 													<input type="hidden" name="add" value="1" />
 													<input type="hidden" name="business" value=" " />
-													<input type="hidden" name="item_name" value="Fortune Sunflower Oil" />
-													<input type="hidden" name="amount" value="7.99" />
-													<input type="hidden" name="discount_amount" value="1.00" />
+													<input type="hidden" name="item_name" value="{{product.name}}" />
+													<input type="hidden" name="amount" value="{{product.price}}" />
+													<!--<input type="hidden" name="discount_amount" value="{{product.price}}" />-->
 													<input type="hidden" name="currency_code" value="USD" />
 													<input type="hidden" name="return" value=" " />
 													<input type="hidden" name="cancel_return" value=" " />
-													<input type="submit" name="submit" value="Add to cart" class="button" />
+													<input type="submit" name="submit" value="Añadir al carrito" class="button" />
 												</fieldset>
 													
 											</form>
