--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -63,10 +63,10 @@
 		</div>
 		<div class="w3l_banner_nav_right">
 			<div class="w3l_banner_nav_right_banner3">
-				<h3>Best Deals For New Products<span class="blink_me"></span></h3>
+				<h3>Los mejores productos disponibles aqui<span class="blink_me"></span></h3>
 			</div>
 			<div class="w3l_banner_nav_right_banner3_btm">
-				<div class="col-md-4 w3l_banner_nav_right_banner3_btml">
+				<!--<div class="col-md-4 w3l_banner_nav_right_banner3_btml">
 					<div class="view view-tenth">
 						<img src="{% static 'core/images/13.jpg' %}" alt=" " class="img-responsive" />
 						<div class="mask">
@@ -110,11 +110,11 @@
 						<li>ut aliquid ex ea commodi</li>
 						<li>magnam aliquam quaerat</li>
 					</ol>
-				</div>
+				</div>-->
 				<div class="clearfix"> </div>
 			</div>
 			<div class="w3ls_w3l_banner_nav_right_grid">
-				<h3>Popular Brands</h3>
+				<h3>Productos</h3>
 				<div class="w3ls_w3l_banner_nav_right_grid1">
 					<h6>food</h6>
 					{% for product in products %}
